module12/Httpserver-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: http-server
  name: http-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: http-server
    spec:
      containers:
      - image: lostar01/mycncamp-httpserver:1.1
        imagePullPolicy: IfNotPresent
        name: http-server
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            memory: "50Mi"
            cpu:    "0.3"
          requests:
            memory: "10Mi"
            cpu:    "0.1"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 1
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
        startupProbe:
          httpGet:
            path: /healthz
            port: 8080
          failureThreshold: 30
          periodSeconds: 10
