module12/Httpserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: http-server
  type: ClusterIP
