module12/Httpserver-Gateway-http.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpserver-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "httpserver.lostar.com"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpserver
spec:
  hosts:
  - "httpserver.lostar.com"
  gateways:
  - httpserver-gateway
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: httpserver-service.httpserver.svc.cluster.local
        port:
          number: 8080
